Fix initialization of Set